# zabctl

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  config.example.yaml  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: bootstrap.md  status.md
docker/: .env.example  README.md  docker-compose.yml  seed.py
docs/: PHASES.md
tests/: test_config.py  test_template_commands.py  test_user_write.py
zabctl/api/: client.py  utils.py
zabctl/api/resources/: alerts.py  configuration.py  events.py  groups.py  hosts.py  items.py  maintenance.py  problems.py  templates.py  triggers.py  usergroups.py  users.py
zabctl/cli/: __init__.py  _common.py  auth.py  context.py  get.py  llm.py  template.py  write.py
zabctl/config/: loader.py
zabctl/output/: formatter.py
