[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zabctl"
dynamic = ["version"]
description = "CLI tool for managing Zabbix monitoring environments"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
    "pre-commit>=3.0",
]

[project.scripts]
zabctl = "zabctl.cli:cli"

[tool.hatch.version]
path = "zabctl/__init__.py"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line length — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# Phase 0 stubs: function signatures are correct contracts; args unused until Phase 1
"zabctl/cli/*.py" = ["ARG001"]
"zabctl/api/resources/*.py" = ["ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["zabctl"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
